tests/snapshots/test_describe__describe_with_context_queued_work_items.snap
---
source: tests/test_describe.rs
expression: value
---
$ govctl work new Task one
Created work item: gov/work/<DATE>-task-one.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work new Task two
Created work item: gov/work/<DATE>-task-two.toml
  ID: WI-<DATE>-002
exit: 0

$ govctl describe --context
{
  "version": "<VERSION>",
  "purpose": "Enforces RFC-driven phase discipline for AI-assisted software development",
  "philosophy": [
    "RFC is the source of truth — No implementation without specification",
    "Phases are enforced — spec → impl → test → stable",
    "Governance is executable — Rules are checked, not suggested"
  ],
  "commands": [
    {
      "name": "init",
      "purpose": "Initialize govctl governance structure in the current directory",
      "when_to_use": "Once per project, before any other govctl commands. Creates gov/ directory structure, config, and schemas.",
      "example": "govctl init"
    },
    {
      "name": "init-skills",
      "purpose": "Install agent skills and agents into the project",
      "when_to_use": "After govctl init, if not using the govctl plugin. Installs skills and agents into the configured agent_dir.",
      "example": "govctl init-skills",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "status",
      "purpose": "Show summary counts of all artifacts",
      "when_to_use": "To get an overview of project governance state. Run at start of session to understand current work.",
      "example": "govctl status",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "check",
      "purpose": "Validate all governed documents",
      "when_to_use": "Before committing, after edits, to verify governance compliance. Run frequently during development.",
      "example": "govctl check",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "verify",
      "purpose": "Run reusable verification guards",
      "when_to_use": "To execute project-level or work-item-specific completion gates before marking work done.",
      "example": "govctl verify --work WI-<DATE>-001",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "search",
      "purpose": "Search governed artifacts across the project",
      "when_to_use": "To find RFCs, clauses, ADRs, work items, and guards by content or ID.",
      "example": "govctl search caching --type adr",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "loop list",
      "purpose": "List persisted local loop states",
      "when_to_use": "To discover interrupted or resumable loops before selecting one by loop ID.",
      "example": "govctl loop list open",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "loop start",
      "purpose": "Start or reuse a loop for one or more explicit work items",
      "when_to_use": "When beginning a local execution loop for a work item or batch of work items.",
      "example": "govctl loop start WI-<DATE>-001",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "loop show",
      "purpose": "Show persisted loop state",
      "when_to_use": "To inspect loop state, resolved work items, dependencies, and round counts by loop ID.",
      "example": "govctl loop show LOOP-2026-04-06-001",
      "prerequisites": [
        "Loop must exist"
      ]
    },
    {
      "name": "loop resume",
      "purpose": "Resume or inspect an existing non-terminal loop",
      "when_to_use": "After discovering a loop with loop list, use its loop ID to resume local execution state.",
      "example": "govctl loop resume LOOP-2026-04-06-001",
      "prerequisites": [
        "Loop must exist"
      ]
    },
    {
      "name": "loop replan",
      "purpose": "Recompute dependency closure for a loop's current work set",
      "when_to_use": "After work item dependency files change and the existing loop needs a refreshed resolved plan.",
      "example": "govctl loop replan LOOP-2026-04-06-001",
      "prerequisites": [
        "Loop must exist"
      ]
    },
    {
      "name": "loop add",
      "purpose": "Add a work item to a loop's editable work field",
      "when_to_use": "To expand an existing loop without creating a new loop ID.",
      "example": "govctl loop add LOOP-2026-04-06-001 work WI-<DATE>-002",
      "prerequisites": [
        "Loop must exist",
        "Work item must exist"
      ]
    },
    {
      "name": "loop remove",
      "purpose": "Remove a work item from a loop's editable work field",
      "when_to_use": "To narrow an existing loop while preserving completed work item lifecycle changes.",
      "example": "govctl loop remove LOOP-2026-04-06-001 work WI-<DATE>-002",
      "prerequisites": [
        "Loop must exist"
      ]
    },
    {
      "name": "loop run",
      "purpose": "Advance the local round protocol for an existing loop",
      "when_to_use": "To open a round for ready work items or validate submitted round evidence by loop ID.",
      "example": "govctl loop run LOOP-2026-04-06-001 --work WI-<DATE>-002",
      "prerequisites": [
        "Loop must exist"
      ]
    },
    {
      "name": "rfc list",
      "purpose": "List all RFCs with their status and phase",
      "when_to_use": "To see all specifications. Filter by status: 'govctl rfc list draft'.",
      "example": "govctl rfc list",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "adr list",
      "purpose": "List all ADRs (Architecture Decision Records)",
      "when_to_use": "To see architectural decisions. Filter by status: 'govctl adr list accepted'.",
      "example": "govctl adr list",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "work list",
      "purpose": "List work items (defaults to pending: queue + active)",
      "when_to_use": "To see current task queue. Use 'govctl work list all' for everything.",
      "example": "govctl work list",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "rfc new",
      "purpose": "Create a new RFC (specification document)",
      "when_to_use": "Before implementing any new feature. RFCs define what must be built. No implementation without specification.",
      "example": "govctl rfc new \"Add caching layer\"",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "adr new",
      "purpose": "Create a new ADR (Architecture Decision Record)",
      "when_to_use": "When making a significant design decision that should be documented. ADRs capture context, decision, and consequences.",
      "example": "govctl adr new \"Use Redis for caching\"",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "work new",
      "purpose": "Create a new work item",
      "when_to_use": "When starting a task. Use --active to immediately activate it.",
      "example": "govctl work new \"Implement describe command\" --active",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "clause new",
      "purpose": "Create a new clause within an RFC",
      "when_to_use": "When adding normative requirements to an RFC. Clauses are the atomic units of specification.",
      "example": "govctl clause new RFC-0001:C-CACHE-TTL \"Cache TTL Policy\" -s Specification -k normative",
      "prerequisites": [
        "RFC must exist"
      ]
    },
    {
      "name": "rfc finalize",
      "purpose": "Transition a draft RFC to normative status",
      "when_to_use": "When an RFC spec is complete and ready for implementation. 'normative' makes it binding law.",
      "example": "govctl rfc finalize RFC-0001 normative",
      "prerequisites": [
        "RFC must be in draft status"
      ]
    },
    {
      "name": "rfc advance",
      "purpose": "Advance RFC phase (spec → impl → test → stable)",
      "when_to_use": "After completing work for current phase. Phase discipline ensures proper workflow.",
      "example": "govctl rfc advance RFC-0001 impl",
      "prerequisites": [
        "RFC should be normative",
        "Current phase work complete"
      ]
    },
    {
      "name": "work move",
      "purpose": "Move work item to new status (queue/active/done/cancelled)",
      "when_to_use": "To update task status. Use 'done' when complete, 'active' to start working.",
      "example": "govctl work move WI-<DATE>-001 done",
      "prerequisites": [
        "Work item must exist",
        "For 'done': acceptance criteria required"
      ]
    },
    {
      "name": "adr accept",
      "purpose": "Accept an ADR (proposed → accepted)",
      "when_to_use": "When an architectural decision is approved.",
      "example": "govctl adr accept ADR-0001",
      "prerequisites": [
        "ADR must be in proposed status"
      ]
    },
    {
      "name": "rfc get / adr get / work get / guard get / clause get",
      "purpose": "Get a field value from an artifact",
      "when_to_use": "To read artifact data. Omit field name to show entire artifact.",
      "example": "govctl rfc get RFC-0001 status",
      "prerequisites": [
        "Artifact must exist"
      ]
    },
    {
      "name": "rfc edit / adr edit / work edit / guard edit / clause edit",
      "purpose": "Edit artifact fields via the canonical path-first surface",
      "when_to_use": "To update RFC, ADR, work item, guard, or clause content fields using `edit <ID> <path> --set/--add/--remove/--tick`.",
      "example": "govctl clause edit RFC-0001:C-SCOPE text --stdin",
      "prerequisites": [
        "Target artifact must exist"
      ]
    },
    {
      "name": "render",
      "purpose": "Render artifacts to markdown",
      "when_to_use": "To generate human-readable documentation from SSOT. Run after RFC changes.",
      "example": "govctl render rfc",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "migrate",
      "purpose": "Upgrade TOML governance storage to the current schema format",
      "when_to_use": "When a TOML-based repository needs schema metadata normalization or bundled schema files refreshed.",
      "example": "govctl migrate",
      "prerequisites": [
        "govctl init"
      ]
    },
    {
      "name": "rfc bump",
      "purpose": "Bump RFC version",
      "when_to_use": "When making changes to a normative RFC. Follows semver.",
      "example": "govctl rfc bump RFC-0001 --minor -m \"Add new clause\"",
      "prerequisites": [
        "RFC must exist"
      ]
    },
    {
      "name": "release / release undo",
      "purpose": "Create or correct the newest local release cut",
      "when_to_use": "To group done Work Items under a version or correct an accidental newest cut.",
      "example": "govctl release 0.2.0",
      "prerequisites": [
        "Cut requires unreleased done Work Items; undo requires a matching newest version"
      ]
    },
    {
      "name": "rfc deprecate / clause deprecate",
      "purpose": "Deprecate an artifact",
      "when_to_use": "When an RFC or clause is no longer relevant but kept for history.",
      "example": "govctl rfc deprecate RFC-0001",
      "prerequisites": [
        "Artifact must exist"
      ]
    },
    {
      "name": "rfc supersede / adr supersede / clause supersede",
      "purpose": "Supersede an artifact with a replacement",
      "when_to_use": "When replacing an artifact with a newer version.",
      "example": "govctl rfc supersede RFC-0001 --by RFC-0010",
      "prerequisites": [
        "Both artifacts must exist"
      ]
    },
    {
      "name": "rfc show",
      "purpose": "Show RFC content to stdout (no file written)",
      "when_to_use": "To read current rendered RFC content. Use --history for the archive or -o json for complete structured output.",
      "example": "govctl rfc show RFC-0001",
      "prerequisites": [
        "RFC must exist"
      ]
    },
    {
      "name": "adr show",
      "purpose": "Show ADR content to stdout (no file written)",
      "when_to_use": "To read current rendered ADR content. Use --history for the archive or -o json for complete structured output.",
      "example": "govctl adr show ADR-0001",
      "prerequisites": [
        "ADR must exist"
      ]
    },
    {
      "name": "work show",
      "purpose": "Show work item content to stdout (no file written)",
      "when_to_use": "To read rendered work item content. Structured output remains complete.",
      "example": "govctl work show WI-<DATE>-001",
      "prerequisites": [
        "Work item must exist"
      ]
    },
    {
      "name": "clause show",
      "purpose": "Show clause content to stdout (no file written)",
      "when_to_use": "To read current clause content. Use --history for obsolete text or -o json for complete structured output.",
      "example": "govctl clause show RFC-0001:C-SUMMARY",
      "prerequisites": [
        "Clause must exist"
      ]
    }
  ],
  "workflow": {
    "phases": [
      "spec: RFC drafting and design discussion",
      "impl: Code writing per normative RFC",
      "test: Verification and test writing",
      "stable: Bug fixes only, no new features"
    ],
    "typical_sequence": [
      "govctl work new \"Feature Title\" --active",
      "govctl rfc new \"Feature Title\"",
      "govctl clause new RFC-NNNN:C-REQUIREMENT \"Requirement\" -k normative",
      "govctl rfc finalize RFC-NNNN normative",
      "govctl rfc advance RFC-NNNN impl",
      "# Implement the feature",
      "govctl rfc advance RFC-NNNN test",
      "# Write tests",
      "govctl rfc advance RFC-NNNN stable",
      "govctl work edit WI-xxx acceptance_criteria[0] --tick done",
      "govctl work move WI-xxx done"
    ]
  },
  "project_state": {
    "rfcs": [],
    "adrs": [],
    "work_items": [
      {
        "id": "WI-<DATE>-001",
        "title": "Task one",
        "status": "queue"
      },
      {
        "id": "WI-<DATE>-002",
        "title": "Task two",
        "status": "queue"
      }
    ]
  },
  "suggested_actions": [
    {
      "command": "govctl work list queue",
      "reason": "No active work items but 2 in queue. Consider activating one.",
      "priority": "high"
    }
  ]
}
exit: 0
